# pydictnest

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
src/pydictnest/: nested_utils.py  utils.py
test/: test_pydictnest.py
