[project]
name = "pydictnest"
version = "0.2.0"
requires-python = ">= 3.9"
authors = [{ name = "Moritz Sallermann", email = "moritzsallermann@gmail.com" }]
description = "A small package, which provides functions for working with nested dictionaries."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/MSallermann/pydictnest"
Issues = "https://github.com/MSallermann/pydictnest/issues"

[tool.ruff]
line-length = 85

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ['ALL']
exclude = ["noxfile.py", "test/*"]
ignore = [
    'W191',
    'E111',
    'E114',
    'E117',
    'D206',
    'D300',
    'Q000',
    'Q001',
    'Q002',
    'Q003',
    'COM812',
    'COM819',
    'ISC002',
    'E501',
    'ANN401',
    'F403',
    'D100',
    'D104',
]
